2011-10-28 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.h
	* GRBezierPath.m
	* GRCircle.h
	* GRCircle.m
	* GRPathObject.h
	* GRPathObject.m
	Refactor path properties into super-class

	* GRBezierPath.h
	* GRBezierPath.m
	* GRDocView.m
	Initialze Bezier Path with properties.

2011-10-27 Riccardo Mottola <rm@gnu.org>

	* GRBox.[h,m]:
	* GRCircle.[h,m]:
	Initializer with property dictionary

	* Graphos.[h,m]:
	Object Inspector accessor.

	* GRDocView.m
	Init Box and Circle on add shape.

2011-10-24 Riccardo Mottola <rm@gnu.org>

	* GRPathObject.[h,m]:
	* GRCircle.m:
	* GRBezierPath.[h,m]:
	declare setLineWidth and lineWidth methods in super class

2011-08-25 Riccardo Mottola <rm@gnu.org>

	* GRCircle.m
	Calculate circle bounds correctly.